refactor(core): 重构核心组件以提升性能和安全性
- 移除 CodeEnumType 中的 ordinal 模式支持，强制使用 @CodeEnumValue 注解
- 优化 BatchSaveTemplate 中的 ID 检测逻辑，添加 @Id 注解检查回退机制
- 重构 EncryptConverter 的线程池管理，使用懒加载和同步机制
- 简化 MergeSpec 中的事务管理，提取到 BulkTransactionHelper 统一处理
- 为 CacheAdapter 添加资源释放接口
- 增强 ConditionBuilder 的函数白名单验证机制
- 优化 AGENTS.md 文档中的编码规范说明
- 更新测试用例以适配构造函数参数变化